--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin:0;
     color: rgb(44, 21, 2);
     background-color: rgb(248, 233, 170);
+    min-height: 100vh;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .header {
@@ -14,6 +15,7 @@ body {
 .div-class {
     width: 1200px;
     margin: 0 auto;
+    padding-bottom: 20px;
 }
 .nav {
     text-align: right;
@@ -78,16 +80,15 @@ body {
     color: rgb(44, 21, 2);
 }
 .footer {
-    position:static;
-    left: 0;
+    position: static;
     bottom: 0;
+    width: 100%;
+    height: 20px;
     padding-top: 11px;
     padding-bottom: 11px;
-    width: 100%;
     background-image: url(/pic1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 20px;
 }
 
 .footer-div {
