--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+  
 body {
     margin:0;
     color: rgb(44, 21, 2);
     background-color: rgb(248, 233, 170);
-    min-height: 100vh;
+    margin-bottom: 40px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .header {
@@ -80,12 +85,13 @@ body {
     color: rgb(44, 21, 2);
 }
 .footer {
-    position: static;
+    position: absolute;
+    left: 0;
     bottom: 0;
-    width: 100%;
     height: 20px;
-    padding-top: 11px;
-    padding-bottom: 11px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
     background-image: url(/pic1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
