--- a/style.css
+++ b/style.css
@@ -33,7 +33,11 @@ body {
     display: inline-block;
     text-align: center;
     background-color:rgb(248, 233, 170);
+    border: 1px solid chocolate;
     border-radius: 12px;
+}
+.nav-bar:hover {
+    background-color: chocolate;
 }
 .header-title {
     padding: 58px 0;
@@ -84,6 +88,7 @@ body {
     font-size: 20px;
     color: rgb(44, 21, 2);
 }
+
 .footer {
     position: absolute;
     left: 0;
@@ -128,6 +133,9 @@ body {
     border-radius: 8px;
   }
 
+.fa:hover {
+    background-color: chocolate;
+}
 .fa-linkedin {
     background: rgb(248, 233, 170);
     color: black;
